--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </header>
 <hr>
 <div id="preloader">
-    <img src="assets/images/load-8510_256.gif" height="100" width="100"/></div>
+    <img src="assets/images/loader.gif" height="100" width="100"/></div>
 <main>
     <section class="home" id="home">
         <div class="home-container">
