--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/normalize.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://unpkg.com/rolly.js@0.2.1/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
 
 </head>
@@ -600,10 +601,11 @@
             <div class="column">
                 <img src="assets/images/gallery/image9.jpg"/>
                 <img src="assets/images/gallery/img.png"/>
+                <img src="assets/images/gallery/image6.png"/>
             </div>
             <div class="column">
-                <img src="assets/images/gallery/image6.png"/>
                 <img src="assets/images/gallery/image1.png"/>
+
                 <img src="assets/images/gallery/image8.jpg"/>
                 <img src="assets/images/gallery/image3.jpg"/>
             </div>
@@ -641,7 +643,77 @@
     </section>
     <footer>Copyright © 2023 <span>Anuki</span> | All Rights Reserved</footer>
 
-    <script src="index.js"></script>
+    <script>
+        /*preloader*/
+        var loader = document.getElementById("preloader");
+        window.addEventListener("load",function (){
+            loader.style.display = "none";
+        })
+
+        /*scroll section*/
+        let sections = document.querySelectorAll('section');
+        let section = document.querySelectorAll('header nav a');
+
+        window.onscroll = () =>{
+            /*sticky header*/
+            let header = document.querySelector('header');
+            header.classList.toggle('sticky', window.scrollY>100);
+
+            /*remove icon and navbar when click navbar*/
+            menuIcon.classList.remove('bx-x');
+            navbar.classList.remove('active');
+        }
+
+
+        /*menu icon*/
+        let menuIcon = document.querySelector('#menu-icon');
+        let navbar =document.querySelector('.nav_bar');
+
+        menuIcon.onclick = () =>{
+            menuIcon.classList.toggle('bx-x');
+            navbar.classList.toggle('active');
+        }
+
+        /*home section multi typing*/
+        const text = document.querySelector(".sec-text");
+        const textLoad = () => {
+            setTimeout(() =>{
+                text.textContent = "Front-End Developer";
+            },0);
+            setTimeout(() =>{
+                text.textContent = "Graphic Designer";
+            },4000);
+        }
+        textLoad();
+        setInterval(textLoad,8000);
+
+        /*portfolio filter*/
+        const filterButtons = document.querySelector("#filter-btns").children;
+        const items = document.querySelector(".portfolio-gallery").children;
+
+        for (let  i =0; i< filterButtons.length; i++){
+            filterButtons[i].addEventListener("click", function (){
+                for (let  j=0; j<filterButtons.length;j++){
+                    filterButtons[j].classList.remove("active")
+                }
+                this.classList.add("active");
+                const target = this.getAttribute("data-target")
+
+                for (let k=0; k<items.length;k++){
+                    items[k].style.display = "none";
+                    if (target == items[k].getAttribute("data-id")){
+                        items[k].style.display = "block";
+                    }
+                    if (target == "all"){
+                        items[k].style.display = "block";
+                    }
+                }
+            })
+
+        }
+
+
+    </script>
 
 </main>
 </body>
