--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <h1>Skills</h1>
                 <h3 class="topic-section">My<span>&nbsp;Skills</span></h3>
             </div>
-            <div class="skills" id="skills">
+            <div class="skills" id="skills" data-aos="fade-up">
                 <div class="skills-sub-topic-div"><div class="skills-sub-topic-line"></div><h4 class="skills-sub-topic">Languages</h4><div class="skills-sub-topic-line"></div></div>
                 <div class="skill-row">
                     <div class="skill-column">
@@ -217,7 +217,7 @@
                 </div>
             </div>
 
-            <div class="tools">
+            <div class="tools" data-aos="fade-up" data-aos-delay="20">
                 <div class="skills-sub-topic-div">
                     <div class="skills-sub-topic-line"></div>
                     <h4 class="skills-sub-topic">Tools</h4>
@@ -385,7 +385,7 @@
             <h3 class="topic-section">My <span>Services</span></h3>
         </div>
         <div class="services-list">
-            <div class="service-card">
+            <div class="service-card" data-aos="fade-right">
                 <div class="face-front">
                     <div class="content-wrap">
                         <i class='bx bx-crop' ></i>
@@ -401,7 +401,7 @@
                     </div>
                 </div>
             </div>
-            <div class="service-card">
+            <div class="service-card"  data-aos="fade-up">
                 <div class="face-front">
                     <div class="content-wrap">
                         <i class='bx bx-code-alt'></i>
@@ -417,7 +417,7 @@
                     </div>
                 </div>
             </div>
-            <div class="service-card">
+            <div class="service-card"  data-aos="fade-left">
                 <div class="face-front">
                     <div class="content-wrap">
                         <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>
@@ -627,13 +627,13 @@
         </div>
 
         <section class="contact-container">
-            <div class="detail-container">
+            <div class="detail-container"  data-aos="fade-right">
                 <div><!--<img src="assets/images/icons/telephone%20(1).png">--><i class='bx bx-phone-call'></i><h5>+94714666422</h5></div>
                 <div><!--<img src="assets/images/icons/email%20(2).png">--><i class='bx bx-envelope'></i><h5>anukidilara002@gmail.com</h5></div>
                 <div><!--<img src="assets/images/icons/location%20(1).png">--><i class='bx bx-location-plus'></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
             </div>
 
-            <div class="contact-form">
+            <div class="contact-form"  data-aos="fade-left">
                 <form action="anukidilara002@gmail.com" target="_blank" method="post">
                     <input type="text" id="name" placeholder="Your name"><br>
                     <input type="email" id="email" placeholder="Your email"><br>
