--- a/index.html
+++ b/index.html
@@ -600,18 +600,18 @@
             <h3 class="topic-section">My<span>&nbsp;Gallery</span></h3>
         </div>
         <div class="gallery-container">
-            <div class="column">
+            <div class="column"  data-aos="fade-right">
                 <img src="assets/images/gallery/image9.jpg"/>
                 <img src="assets/images/gallery/img.png"/>
                 <img src="assets/images/gallery/image6.png"/>
             </div>
-            <div class="column">
+            <div class="column"  data-aos="fade-up">
                 <img src="assets/images/gallery/image1.png"/>
 
                 <img src="assets/images/gallery/image8.jpg"/>
                 <img src="assets/images/gallery/image3.jpg"/>
             </div>
-            <div class="column">
+            <div class="column" data-aos="fade-left">
                 <img src="assets/images/gallery/img_1.png"/>
                 <img src="assets/images/gallery/image5.jpg"/>
                 <img src="assets/images/gallery/image7.jpg"/>
@@ -627,13 +627,13 @@
         </div>
 
         <section class="contact-container">
-            <div class="detail-container"  data-aos="fade-right">
+            <div class="detail-container"  data-aos="fade-right" data-aos-delay="20">
                 <div><!--<img src="assets/images/icons/telephone%20(1).png">--><i class='bx bx-phone-call'></i><h5>+94714666422</h5></div>
                 <div><!--<img src="assets/images/icons/email%20(2).png">--><i class='bx bx-envelope'></i><h5>anukidilara002@gmail.com</h5></div>
                 <div><!--<img src="assets/images/icons/location%20(1).png">--><i class='bx bx-location-plus'></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
             </div>
 
-            <div class="contact-form"  data-aos="fade-left">
+            <div class="contact-form"  data-aos="fade-left" data-aos-delay="15">
                 <form action="anukidilara002@gmail.com" target="_blank" method="post">
                     <input type="text" id="name" placeholder="Your name"><br>
                     <input type="email" id="email" placeholder="Your email"><br>
