--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <div class="home-container">
             <div class="shadow-border"></div>
             <div class="headings">
-                <h1>My Self,<br><span>Anuki Dilara</span></h1>
+                <h1 data-aos="fade-down">My Self,<br><span>Anuki Dilara</span></h1>
             </div>
             <p>
                 I am trying to be a front end developer.
             </p>
 
-            <div class="home-image" data-aos="flip-right">
+            <div class="home-image"> <!--data-aos="flip-right"-->
                 <img src="assets/images/homeImage2-.png" alt="anuki dilara" >
             </div>
 
@@ -69,7 +69,7 @@
                     <i class="fa-brands fa-github"></i>
                 </a>
             </div>
-            <div class="status">
+            <div class="status" data-aos="fade-up">
                 <div class="status-container">
                     <span class="text first-text">I am<br></span>
                     <span class="text sec-text">Front-End Developer</span>
@@ -124,7 +124,7 @@
                     <div class="education-box">
 
                         <div class="education-content">
-                            <div class="content" data-aos="fade-left">
+                            <div class="content" data-aos="fade-up">
                                 <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
                                 <h2>1-5 Grade- MR/Rathanajothi Vidyalaya</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="education-content">
-                            <div class="content" data-aos="fade-left" data-aos-delay="10">
+                            <div class="content" data-aos="fade-up" data-aos-delay="10">
                                 <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
                                 <h2>1-5 Grade- MR/Rathanajothi Vidyalaya</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
@@ -140,7 +140,7 @@
                         </div>
 
                         <div class="education-content">
-                            <div class="content" data-aos="fade-left" data-aos-delay="20">
+                            <div class="content" data-aos="fade-up" data-aos-delay="20">
                                 <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
                                 <h2>G.C.E Ordinary Level - Mahinda Rajapaksha Vidyalaya Matara</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
@@ -148,7 +148,7 @@
                         </div>
 
                         <div class="education-content">
-                            <div class="content" data-aos="fade-left" data-aos-delay="30">
+                            <div class="content" data-aos="fade-up" data-aos-delay="30">
                                 <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
                                 <h2>G.C.E Advanced Level - Mahinda Rajapaksha Vidyalaya Matara</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
@@ -156,7 +156,7 @@
                         </div>
 
                         <div class="education-content">
-                            <div class="content" data-aos="fade-left" data-aos-delay="40">
+                            <div class="content" data-aos="fade-up" data-aos-delay="40">
                                 <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
                                 <h2>Graduated Diploma in IJSE</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
@@ -385,7 +385,7 @@
             <h3 class="topic-section">My <span>Services</span></h3>
         </div>
         <div class="services-list">
-            <div class="service-card" data-aos="fade-right">
+            <div class="service-card" data-aos="fade-up">
                 <div class="face-front">
                     <div class="content-wrap">
                         <i class='bx bx-crop' ></i>
@@ -417,7 +417,7 @@
                     </div>
                 </div>
             </div>
-            <div class="service-card"  data-aos="fade-left">
+            <div class="service-card"  data-aos="fade-up">
                 <div class="face-front">
                     <div class="content-wrap">
                         <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>
@@ -588,8 +588,8 @@
                 </div>
             </div>
         </div>
-        <a href="assignments.html">
-            <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
+        <a href="assignments.html">More
+            <!--<i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>-->
         </a>
     </section>
 
@@ -600,7 +600,7 @@
             <h3 class="topic-section">My<span>&nbsp;Gallery</span></h3>
         </div>
         <div class="gallery-container">
-            <div class="column"  data-aos="fade-right">
+            <div class="column"  data-aos="fade-up">
                 <img src="assets/images/gallery/image9.jpg"/>
                 <img src="assets/images/gallery/img.png"/>
                 <img src="assets/images/gallery/image6.png"/>
@@ -611,7 +611,7 @@
                 <img src="assets/images/gallery/image8.jpg"/>
                 <img src="assets/images/gallery/image3.jpg"/>
             </div>
-            <div class="column" data-aos="fade-left">
+            <div class="column" data-aos="fade-up">
                 <img src="assets/images/gallery/img_1.png"/>
                 <img src="assets/images/gallery/image5.jpg"/>
                 <img src="assets/images/gallery/image7.jpg"/>
@@ -627,13 +627,13 @@
         </div>
 
         <section class="contact-container">
-            <div class="detail-container"  data-aos="fade-right" data-aos-delay="20">
-                <div><!--<img src="assets/images/icons/telephone%20(1).png">--><i class='bx bx-phone-call'></i><h5>+94714666422</h5></div>
-                <div><!--<img src="assets/images/icons/email%20(2).png">--><i class='bx bx-envelope'></i><h5>anukidilara002@gmail.com</h5></div>
-                <div><!--<img src="assets/images/icons/location%20(1).png">--><i class='bx bx-location-plus'></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
+            <div class="detail-container"  data-aos="fade-up" data-aos-delay="20">
+                <div><i class='bx bx-phone-call'></i><h5>+94714666422</h5></div>
+                <div><i class='bx bx-envelope'></i><h5>anukidilara002@gmail.com</h5></div>
+                <div><i class='bx bx-location-plus'></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
             </div>
 
-            <div class="contact-form"  data-aos="fade-left" data-aos-delay="15">
+            <div class="contact-form"  data-aos="fade-up" data-aos-delay="15">
                 <form action="anukidilara002@gmail.com" target="_blank" method="post">
                     <input type="text" id="name" placeholder="Your name"><br>
                     <input type="email" id="email" placeholder="Your email"><br>
