--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
         </div>
 
         <section class="contact-container">
-            <div class="detail-container"  data-aos="fade-up" data-aos-delay="20">
+            <div class="detail-container"  data-aos="flip-up">
                 <div><i class='bx bx-phone-call'></i><h5>+94714666422</h5></div>
                 <div><i class='bx bx-envelope'></i><h5>anukidilara002@gmail.com</h5></div>
                 <div><i class='bx bx-location-plus'></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
