--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section class="about" id="about" data-scene>
         <div class="shadow-topic">
             <h1>About</h1>
-            <h3 class="topic-section">About<span>&nbsp;Me</span></h3>
+            <h3 class="topic-section" data-aos="flip-up">About<span>&nbsp;Me</span></h3>
         </div>
 
         <div class="about-img" data-aos="zoom-out">
@@ -124,7 +124,7 @@
                     <div class="education-box">
 
                         <div class="education-content">
-                            <div class="content" data-aos="fade-up">
+                            <div class="content" data-aos="fade-left">
                                 <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
                                 <h2>1-5 Grade- MR/Rathanajothi Vidyalaya</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="education-content">
-                            <div class="content" data-aos="fade-up" data-aos-delay="10">
+                            <div class="content" data-aos="fade-left" data-aos-delay="10">
                                 <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
                                 <h2>1-5 Grade- MR/Rathanajothi Vidyalaya</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
@@ -140,7 +140,7 @@
                         </div>
 
                         <div class="education-content">
-                            <div class="content" data-aos="fade-up" data-aos-delay="20">
+                            <div class="content" data-aos="fade-left" data-aos-delay="20">
                                 <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
                                 <h2>G.C.E Ordinary Level - Mahinda Rajapaksha Vidyalaya Matara</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
@@ -148,7 +148,7 @@
                         </div>
 
                         <div class="education-content">
-                            <div class="content" data-aos="fade-up" data-aos-delay="30">
+                            <div class="content" data-aos="fade-left" data-aos-delay="30">
                                 <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
                                 <h2>G.C.E Advanced Level - Mahinda Rajapaksha Vidyalaya Matara</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
@@ -156,7 +156,7 @@
                         </div>
 
                         <div class="education-content">
-                            <div class="content" data-aos="fade-up" data-aos-delay="40">
+                            <div class="content" data-aos="fade-left" data-aos-delay="40">
                                 <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
                                 <h2>Graduated Diploma in IJSE</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
@@ -382,10 +382,10 @@
     <section class="services" id="services" data-scene>
         <div class="shadow-topic">
             <h1>Services</h1>
-            <h3 class="topic-section">My <span>Services</span></h3>
+            <h3 class="topic-section" data-aos="flip-down">My <span>Services</span></h3>
         </div>
         <div class="services-list">
-            <div class="service-card" data-aos="fade-up">
+            <div class="service-card">
                 <div class="face-front">
                     <div class="content-wrap">
                         <i class='bx bx-crop' ></i>
@@ -401,7 +401,7 @@
                     </div>
                 </div>
             </div>
-            <div class="service-card"  data-aos="fade-up">
+            <div class="service-card">
                 <div class="face-front">
                     <div class="content-wrap">
                         <i class='bx bx-code-alt'></i>
@@ -417,7 +417,7 @@
                     </div>
                 </div>
             </div>
-            <div class="service-card"  data-aos="fade-up">
+            <div class="service-card">
                 <div class="face-front">
                     <div class="content-wrap">
                         <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>
