--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             <div class="row">
                 <div class="portfolio-gallery">
 
-                    <div class="item" data-id="java">
+                    <div class="item" data-aos="zoom-in" data-id="java">
                         <div class="inner">
                             <img src="assets/images/projects/Ag1_09.jpg" alt="portfolio"/>
                             <div class="project-layer">
@@ -466,7 +466,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item" data-id="java">
+                    <div class="item" data-aos="zoom-in" data-id="java">
                         <div class="inner">
                             <img src="assets/images/projects/GST%20CAM%20939-10.jpg" alt="portfolio"/>
                             <div class="project-layer">
@@ -477,7 +477,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item" data-id="java">
+                    <div class="item" data-aos="zoom-in" data-id="java">
                         <div class="inner">
                             <img src="assets/images/projects/hostelProject-img.jpeg" alt="portfolio"/>
                             <div class="project-layer">
@@ -488,7 +488,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item" data-id="java">
+                    <div class="item" data-aos="zoom-in" data-id="java">
                         <div class="inner">
                             <img src="assets/images/projects/chat-04.jpg" alt="portfolio"/>
                             <div class="project-layer">
@@ -499,7 +499,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item" data-id="web">
+                    <div class="item" data-aos="zoom-in" data-id="web">
                         <div class="inner">
                             <img src="assets/images/projects/portfolioProject.webp" alt="portfolio"/>
                             <div class="project-layer">
@@ -510,7 +510,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item" data-id="design">
+                    <div class="item" data-aos="zoom-in" data-id="design">
                         <div class="inner">
                             <img src="assets/images/projects/Ag1_09.jpg" alt="portfolio"/>
                             <div class="project-layer">
