--- a/index.html
+++ b/index.html
@@ -627,13 +627,13 @@
         </div>
 
         <section class="contact-container">
-            <div class="detail-container"  data-aos="flip-up">
+            <div class="detail-container"  data-aos="fade-up" data-aos-delay="45">
                 <div><i class='bx bx-phone-call'></i><h5>+94714666422</h5></div>
                 <div><i class='bx bx-envelope'></i><h5>anukidilara002@gmail.com</h5></div>
                 <div><i class='bx bx-location-plus'></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
             </div>
 
-            <div class="contact-form"  data-aos="fade-up" data-aos-delay="15">
+            <div class="contact-form"  data-aos="fade-up" data-aos-delay="45">
                 <form action="anukidilara002@gmail.com" target="_blank" method="post">
                     <input type="text" id="name" placeholder="Your name"><br>
                     <input type="email" id="email" placeholder="Your email"><br>
@@ -718,7 +718,7 @@
 
 
         AOS.init({
-            duration: 1500
+            duration: 2500
         });
     </script>
 
