--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section class="about" id="about" data-scene>
         <div class="shadow-topic">
             <h1>About</h1>
-            <h3 class="topic-section" data-aos="flip-up">About<span>&nbsp;Me</span></h3>
+            <h3 class="topic-section">About<span>&nbsp;Me</span></h3>
         </div>
 
         <div class="about-img" data-aos="zoom-out">
@@ -382,7 +382,7 @@
     <section class="services" id="services" data-scene>
         <div class="shadow-topic">
             <h1>Services</h1>
-            <h3 class="topic-section" data-aos="flip-down">My <span>Services</span></h3>
+            <h3 class="topic-section">My <span>Services</span></h3>
         </div>
         <div class="services-list">
             <div class="service-card">
